Minor styling and overflow fix moving onto hover function

--- a/Styling/styles.css
+++ b/Styling/styles.css
@@ -6,37 +6,35 @@
 display: flex;
 margin: auto;
 background-color: red;
-height: 40vw;
-width: 60vw;
+height: 55vw;
+width: 70vw;
 border-radius: 5%;
 align-items: center;
 padding-bottom: 2em;
-overflow: hidden;
 flex-direction: column;
 
 }
 #innerBox{
 border: solid black 10px;
-margin: auto;
 margin-top: 10px;
 background-color: white;
-width:90%;
-height: 90%;
+width:55vw;
+height: 70vh;
 border-radius: 5%;
 overflow: hidden;
 border: black solid 10px;
 }
 #selectBox{
+    min-height: 5%;
     width: 100%;
     margin: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 8px 10px 20px 10px ;
-    
+    padding: 30px 10px 20px 10px ;
 }
-tr,
-td {
-    padding: 0;
+#tbBox{
+    width: 100%;
+    height: 100%;
     margin: 0;
 }
